# Scribble

./: CMakeLists.txt  README.md
include/: grid.h  init.h  input.h  machine.h  matrix.h  read.h  render.h
src/: grid.cpp  init.cpp  input.cpp  machine.cpp  matrix.cpp  read.cpp  render.cpp  window.cpp
